@@ -1,7 +1,7 @@
 ############################################################################
 # libc/stdio/Make.defs
 #
-#   Copyright (C) 2011-2013 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2011-2014 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -37,13 +37,13 @@
 # This first group of C files do not depend on having file descriptors or
 # C streams.
 
-CSRCS += lib_fileno.c lib_printf.c lib_syslog.c lib_lowsyslog.c \
-		 lib_sprintf.c lib_asprintf.c lib_snprintf.c lib_libsprintf.c \
-		 lib_vsprintf.c lib_avsprintf.c lib_vsnprintf.c lib_libvsprintf.c \
-		 lib_dprintf.c lib_vdprintf.c \
-		 lib_meminstream.c lib_memoutstream.c lib_lowinstream.c \
-		 lib_lowoutstream.c lib_zeroinstream.c lib_nullinstream.c \
-		 lib_nulloutstream.c lib_sscanf.c
+CSRCS += lib_fileno.c lib_printf.c lib_syslog.c lib_lowsyslog.c
+CSRCS += lib_sprintf.c lib_asprintf.c lib_snprintf.c lib_libsprintf.c
+CSRCS += lib_vsprintf.c lib_avsprintf.c lib_vsnprintf.c lib_libvsprintf.c
+CSRCS += lib_dprintf.c lib_vdprintf.c
+CSRCS += lib_meminstream.c lib_memoutstream.c lib_lowinstream.c
+CSRCS += lib_lowoutstream.c lib_zeroinstream.c lib_nullinstream.c
+CSRCS += lib_nulloutstream.c lib_sscanf.c
 
 # The remaining sources files depend upon file descriptors
 
@@ -55,13 +55,13 @@ CSRCS += lib_rawinstream.c lib_rawoutstream.c
 
 ifneq ($(CONFIG_NFILE_STREAMS),0)
 
-CSRCS += lib_fopen.c lib_fclose.c lib_fread.c lib_libfread.c lib_fseek.c \
-		 lib_ftell.c lib_fsetpos.c lib_fgetpos.c lib_fgetc.c lib_fgets.c \
-		 lib_gets.c lib_fwrite.c lib_libfwrite.c lib_fflush.c \
-		 lib_libflushall.c lib_libfflush.c lib_rdflush.c lib_wrflush.c \
-		 lib_fputc.c lib_puts.c lib_fputs.c lib_ungetc.c lib_vprintf.c \
-		 lib_fprintf.c lib_vfprintf.c lib_stdinstream.c lib_stdoutstream.c \
-		 lib_perror.c lib_feof.c lib_ferror.c lib_clearerr.c
+CSRCS += lib_fopen.c lib_fclose.c lib_fread.c lib_libfread.c lib_fseek.c
+CSRCS += lib_ftell.c lib_fsetpos.c lib_fgetpos.c lib_fgetc.c lib_fgets.c
+CSRCS += lib_gets_s.c lib_gets.c lib_fwrite.c lib_libfwrite.c lib_fflush.c
+CSRCS += lib_libflushall.c lib_libfflush.c lib_rdflush.c lib_wrflush.c
+CSRCS += lib_fputc.c lib_puts.c lib_fputs.c lib_ungetc.c lib_vprintf.c
+CSRCS += lib_fprintf.c lib_vfprintf.c lib_stdinstream.c lib_stdoutstream.c
+CSRCS += lib_perror.c lib_feof.c lib_ferror.c lib_clearerr.c
 
 endif
 endif
