@@ -6383,4 +6383,7 @@
 	  (2014-1-7).
 	* arch/arm/src/a1x/a1x_serial.c: Correct handling of the BUSY
 	  interrupt (2014-1-7).
+	* include/sys/types.h:  Add a bogus rsize_t type (2014-1-7).
+	* libc/stdio/lib_gets_s.c:  Add a quick'n'dirty implementation of
+	  gets_s() which replaces gets() in C11 (2014-1-7).
 
